# Droploop

./: .env.example  ADMIN_SETUP_GUIDE.md  ARCHITECTURE.md  QR_SCANNER_AIRDROP_FEATURES.md  README.md  admin-keypair.txt  cspell.json  generate-keypair.js  global.d.ts  next.config.js  package-lock.json  package.json  presentation.md  temp_env_content.txt  tsconfig.json
.same/: todos.md
docs/: ARCHITECTURE.md  COMMON_ERRORS.md  PRESENTATION.md  TOKEN_CREATION_ERROR.md  TOKEN_CREATION_FIXES.md  TROUBLESHOOTING_GUIDE.md
scripts/: check-wallet.js  convert-key.js  generate-sender-key.js  generate-wallet.js  key-format.js  setup-dev-environment.js  simple-wallet.js  test-light-protocol.js  update-light-protocol-env.js
solana-cpop/: .env.example  DEPLOYMENT.md  README.md  TEST_FLOW.md  drizzle.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  update-imports.sh
solana-cpop/anchor-program/: Anchor.toml  package-lock.json  package.json  tsconfig.json
solana-cpop/anchor-program/programs/cpop/: Cargo.toml
solana-cpop/anchor-program/programs/cpop/src/: lib.rs
solana-cpop/anchor-program/tests/: cpop.ts
solana-cpop/public/: index.html
solana-cpop/src/: env.mjs
solana-cpop/src/app/: layout.tsx  page.tsx
solana-cpop/src/lib/: compression.ts  merkle-tree-util.ts  merkle-tree.ts  referral-client.ts  solana.ts  types.ts
solana-cpop/src/pages/: _app.tsx  (+1 more)
src/: README.md
src/app/: globals.css  page.tsx
src/hooks/: use-safe-wallet.ts
src/lib/: constants.ts  types.ts
src/types/: solana-wallet-adapter.d.ts
temp_extract/.same/: todos.md
(+119 files in other folders)
